test: seat service